2.2.3
 - fix: improve plot matrix column/row visualization and show flow
   rate (#45)
 - docs: update visualization of Young's modulus look-up tables
   using new figure script from dclab
2.2.2
 - fix: correct box filter ranges when feature contains inf values
 - enh: add pretty tool icons from KDE breeze theme
2.2.1
 - fix: zero-division error when setting "one plot per dataset"
   for an empty plot (#41)
 - build: pin PyQt5 to 5.14.2 on Linux/macOS
2.2.0
 - setup: bump dclab from 0.26.2 to 0.27.5 (support for machine
   learning features)
 - fix: modify the GUI to enable box filtering for ml_score_???
   features
 - ref: pipeline.get_features now only returns features that are
   available (previously all features were returned when no
   datasets were in the pipeline)
2.1.6
 - fix: export file names were allowed to have invalid characters
 - fix: Quick View showed filtered events that were not plotted
   (statistics were computed correctly though)
 - fix: Quick View was not very informative when all events were
   filtered away - a message is now shown
 - setup: bump dclab from 0.26.1 to 0.26.2 (fix bin num computation
   using Doane's formula)
2.1.5
 - fix: marker hue feature data min/max was always computed even if
   not selected; for datasets without bright_avg (standard hue) this
   resulted in long waiting times
 - fix: avoid pyqtgraph error messages in pipeline plots by disabling
   hovering events (not used anyway)
 - fix: plot export did not work for single plots
 - fix: exported event images sometimes had wrong contrast
2.1.4
 - enh: add busy cursors wherever it seems fitting
 - setup: bump dclab from 0.24.7 to 0.26.1 (volume-deformation
   isoelasticity lines, improved DCOR caching)
2.1.3
 - fix: opening sessions did not work due to missing slot decorator
 - fix: in some cases the temperature/viscosity setting was not
   correctly written to the UI for individual slots when switching