@@ -91,7 +91,11 @@ if __name__ == "__main__":
 
     with (here / "index.theme").open("w") as fd:
         directories = sorted(set(directories))
-        fd.write(index.format(directories=",".join(directories)))
+        fd.write(index.format(directories=",".join(
+            ["shapeout2"] + directories)))
+        # Shape-Out icons
+        fd.write(index_item.format(directory="shapeout2", res="16"))
+        # theme icons
         for dd in directories:
             for res in ["16", "22", "24", "32", "64", "128"]:
                 if res in str(dd):
